--- a/IT-Skill-Sharing-Learning-Platform/oauth2LoginRegisterGoogle-master/springboot/src/main/resources/application.properties
+++ b/IT-Skill-Sharing-Learning-Platform/oauth2LoginRegisterGoogle-master/springboot/src/main/resources/application.properties
@@ -17,8 +17,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 
 #GOOGLE OAUTH CONFIG
-spring.security.oauth2.client.registration.google.client-id={google_client_id}
-spring.security.oauth2.client.registration.google.client-secret={google_client_secrete}
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
 spring.security.oauth2.client.registration.google.scope=profile, email
 spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:5050/login/oauth2/code/google
 
